--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,22 +1,40 @@
 {
+  "root": true,
   "env": {
     "browser": true,
-    "es2021": true
+    "es2021": true,
+    "node": true
   },
   "extends": [
-    "eslint:recommended",
+    "airbnb-base",
+    "airbnb-typescript/base",
     "plugin:@typescript-eslint/recommended",
+    "prettier",
     "plugin:prettier/recommended"
   ],
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
     "ecmaVersion": "latest",
-    "sourceType": "module"
+    "sourceType": "module",
+    "project": ["./tsconfig.json", "./tsconfig.node.json"]
   },
-  "plugins": ["@typescript-eslint"],
+  "plugins": ["@typescript-eslint", "prettier"],
   "rules": {
     "@typescript-eslint/no-explicit-any": "off",
-    "@typescript-eslint/ban-types": "off",
-    "prefer-const": "off"
-  }
+    "import/prefer-default-export": "off",
+    "no-plusplus": "off",
+    "no-param-reassign": "off",
+    "prefer-const": "off",
+    "no-restricted-syntax": "off",
+    "no-continue": "off",
+    "max-classes-per-file": "off"
+  },
+  "overrides": [
+    {
+      "files": ["test/**/*.test.ts"],
+      "parserOptions": {
+        "project": "./tsconfig.test.json"
+      }
+    }
+  ]
 }
