--- a/package.json
+++ b/package.json
@@ -6,7 +6,12 @@
   "keywords": [
     "veloxa",
     "fetch",
-    "request"
+    "http",
+    "request",
+    "client",
+    "api",
+    "typescript",
+    "lightweight"
   ],
   "license": "MIT",
   "homepage": "https://github.com/OpenKnights/veloxa#readme",
@@ -35,6 +40,15 @@
     "build": "tsdown --clear --dts",
     "build:mock": "pnpm --filter mock-server run build",
     "test": "vitest",
+    "test:watch": "vitest --watch",
+    "test:ui": "vitest --ui",
+    "test:coverage": "vitest --coverage",
+    "test:coverage:ui": "vitest --coverage --ui",
+    "test:basic": "vitest run test/basic.test.ts",
+    "test:methods": "vitest run test/http-methods.test.ts",
+    "test:errors": "vitest run test/error-handling.test.ts",
+    "test:hooks": "vitest run test/hooks.test.ts",
+    "test:types": "vitest run test/response-types.test.ts",
     "lint": "eslint",
     "lint:fix": "eslint --fix",
     "format": "prettier . --write",
@@ -50,8 +64,9 @@
     "@king-3/eslint-config": "^1.0.5",
     "@types/node": "^24.5.2",
     "bumpp": "^10.2.3",
-    "create-mock-server": "^0.1.0",
+    "create-mock-server": "^0.1.2",
     "eslint": "^9.34.0",
+    "h3": "^1.15.4",
     "prettier": "^3.6.2",
     "tsdown": "^0.14.2",
     "typescript": "^5.9.2",
