--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   },
   "author": "king-3 <w2196592083@gmail.com>",
   "files": [
-    "dist/"
+    "dist"
   ],
   "main": "./dist/index.cjs",
   "module": "./dist/index.js",
@@ -40,11 +40,6 @@
     "build": "tsdown",
     "build:mock": "pnpm --filter mock-server run build",
     "test": "vitest",
-    "test:basic": "vitest run test/basic.test.ts",
-    "test:methods": "vitest run test/http-methods.test.ts",
-    "test:errors": "vitest run test/error-handling.test.ts",
-    "test:hooks": "vitest run test/hooks.test.ts",
-    "test:types": "vitest run test/response-types.test.ts",
     "lint": "eslint",
     "lint:fix": "eslint --fix",
     "format": "prettier . --write",
@@ -61,7 +56,7 @@
     "@king-3/prettier-config": "^1.0.2",
     "@types/node": "^24.5.2",
     "bumpp": "^10.2.3",
-    "create-mock-server": "^0.1.3",
+    "create-mock-server": "^0.1.4",
     "eslint": "^9.34.0",
     "h3": "^1.15.4",
     "prettier": "^3.6.2",
