--- a/package.json
+++ b/package.json
@@ -36,31 +36,39 @@
       "import": "./dist/index.js"
     }
   },
+  "imports": {
+    "#/*": "./",
+    "#types/*": "./types/*"
+  },
   "scripts": {
-    "build": "tsdown",
+    "play": "play",
+    "build": "tsx scripts/build.ts",
     "test": "vitest",
     "lint": "eslint",
     "lint:fix": "eslint --fix",
-    "format": "prettier . --write",
-    "release": "bumpp && pnpm publish"
+    "format": "prettier --write .",
+    "release": "bumpp"
   },
   "dependencies": {
+    "@king-3/play-tsx": "^2.0.0",
     "defu": "^6.1.4",
     "destr": "^2.0.5",
     "devix": "^1.0.4",
     "ufo": "^1.6.1"
   },
   "devDependencies": {
-    "@king-3/eslint-config": "^1.0.8",
-    "@king-3/prettier-config": "^1.0.2",
+    "@king-3/eslint-config": "^4.3.0",
+    "@king-3/prettier-config": "^3.3.1",
     "@types/node": "^24.5.2",
+    "ansis": "^4.2.0",
+    "better-mock-server": "^1.0.0",
     "bumpp": "^10.2.3",
-    "create-mock-server": "^0.1.4",
-    "eslint": "^9.34.0",
-    "h3": "^1.15.4",
+    "eslint": "^9.39.1",
+    "h3": "2.0.1-rc.5",
     "prettier": "^3.6.2",
-    "tsdown": "^0.14.2",
-    "typescript": "^5.9.2",
+    "tsdown": "^0.16.6",
+    "tsx": "^4.20.6",
+    "typescript": "^5.9.3",
     "vitest": "^3.2.4"
   }
 }
