--- a/package.json
+++ b/package.json
@@ -44,6 +44,13 @@
     "play": "play",
     "build": "tsx scripts/build.ts",
     "test": "vitest",
+    "test:ui": "vitest --ui",
+    "test:coverage": "vitest run --coverage",
+    "test:basic": "vitest run test/basic.test.ts",
+    "test:errors": "vitest run test/errors.test.ts",
+    "test:interceptors": "vitest run test/interceptors.test.ts",
+    "test:headers": "vitest run test/headers.test.ts",
+    "test:response-types": "vitest run test/response-types.test.ts",
     "lint": "eslint",
     "lint:fix": "eslint --fix",
     "format": "prettier --write .",
