--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
   "devDependencies": {
     "@king-3/eslint-config": "^4.3.0",
     "@king-3/prettier-config": "^3.3.1",
+    "@prettier/plugin-oxc": "^0.0.5",
     "@types/node": "^24.5.2",
     "ansis": "^4.2.0",
     "better-mock-server": "^1.0.0",
