🔧 chore: remove imports from package.json and update module paths

--- a/package.json
+++ b/package.json
@@ -27,18 +27,14 @@
     "dist"
   ],
   "main": "./dist/index.cjs",
-  "module": "./dist/index.js",
+  "module": "./dist/index.mjs",
   "types": "./dist/index.d.ts",
   "exports": {
     ".": {
       "types": "./dist/index.d.ts",
       "require": "./dist/index.cjs",
-      "import": "./dist/index.js"
+      "import": "./dist/index.mjs"
     }
-  },
-  "imports": {
-    "#/*": "./",
-    "#types/*": "./types/*"
   },
   "scripts": {
     "play": "play",
